# wifi-observer

./: .gitignore  LICENSE  README.md  conftest.py  plot.py  pyproject.toml  ruff.toml  run.sh  wifi_observer.py  wifi_observer_plot.py
.github/workflows/: ci.yml  release.yml
doc/: IMPROVEMENTS.md  SPEC.md
tests/: test_basic.py  test_core.py  test_ping_regex.py  test_statistics.py  test_wireless.py
